# deltable

./: AGENTS.md  README.md  pyproject.toml
.agents/skills/modern-python-style/: SKILL.md
.agents/skills/modern-python-style/references/: examples.md
.agents/skills/rtf-clinical-tables/: SKILL.md
.agents/skills/rtf-clinical-tables/references/: REFERENCE.md
.github/workflows/: test_deploy.yml
scripts/: generate_example_rtf.py
src/deltable/: __init__.py  cli.py  compare.py  comparison.py  error.py  rtf_table.py  rtf_to_html.py
tests/: conftest.py  test_add_one.py  test_cli_compare.py  test_example_rtf_fixture.py  test_html_comparison.py  test_rtf_table_loader.py  test_rtf_to_html.py  test_table_comparison.py
tests/data/csv/: ae_summary_example.csv  group_header_merged_spanning.csv  grouped_row_headers_vertical_merge.csv  multiline_headers.csv  unicode_superscript_symbols.csv
tests/data/html/: ds_table.html  frq_table.html  lb_table.html  surv_table.html
tests/data/html/baseline/: ds_table.html  frq_table.html  lb_table.html  surv_table.html
tests/data/html/variants/: ds_table_changed_values.html  ds_table_heading_whitespace.html  ds_table_minus_1_column.html  ds_table_row_whitespace.html  ds_table_swapped_rows.html  lb_table_minus_1_table.html
tests/data/rtf/: ae_summary_baseline.rtf  ae_summary_example.rtf  ds_table.rtf  frq_table.rtf  group_header_first_cell_bare_cells.rtf  group_header_merged_spanning.rtf  grouped_row_headers_vertical_merge.rtf  indented_group_rows.rtf  lb_table.rtf  multiline_headers.rtf  pagination_repeated_headers.rtf  repeating_header_row.rtf  row_terminator_plain_row.rtf  spanning_header_horizontal_merge.rtf  surv_table.rtf  unicode_superscript_symbols.rtf  vertical_merge_stub_column.rtf
