[project]
name = "deltable"
version = "0.1.0"
description = "Get the delta between .rtf tables"
authors = [
    { name = "David Zhang" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.10.*"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
    "rtflite==2.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deltable"]

[tool.pytest.ini_options]
pythonpath = ["src"]
