[project]
name = "deltable"
version = "0.1.0"
description = "Get the delta between .rtf tables"
authors = [
    { name = "David Zhang" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "click==8.2.1",
    "lxml==6.0.2",
    "pandas==3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deltable"]

[project.scripts]
deltable = "deltable.cli:cli"

[tool.pytest.ini_options]
pythonpath = ["src"]
